# brain-db

./: .gitignore  AUTONOMY.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEV_SETUP.md  Dockerfile  LICENSE  README.md  RELEASE-NOTES-v1.0.0.md  ROADMAP.md  SECURITY.md  docker-compose.yml  justfile  rustfmt.toml
crates/brain-cli/: Cargo.toml
crates/brain-cli/src/: lib.rs  main.rs
crates/brain-cli/tests/: agent.rs  audit.rs  cli.rs  config.rs  shard.rs  snapshot.rs  worker.rs
crates/brain-core/: Cargo.toml
crates/brain-core/src/: edge.rs  edge_kind_ref.rs  error.rs  ids.rs  lib.rs  memory.rs  migration.rs  worker_state.rs
crates/brain-core/tests/: smoke.rs
crates/brain-embed/: Cargo.toml
crates/brain-embed/benches/: throughput.rs
crates/brain-embed/src/: cache.rs  config.rs  dispatcher.rs  error.rs  fingerprint.rs  forward.rs  lib.rs  model.rs  tokenize.rs
crates/brain-embed/tests/: cache.rs  determinism.rs  dispatcher.rs  forward.rs  load.rs
crates/brain-explore/: Cargo.toml
crates/brain-explore/src/: lib.rs
crates/brain-explore/tests/: encode_scenarios.rs
crates/brain-extractors/: Cargo.toml
crates/brain-extractors/benches/: llm_pipeline.rs  pattern_extract.rs  statement_kind_pattern.rs
crates/brain-extractors/docs/: bundled-ner.md  gliner.md
crates/brain-extractors/src/: candle_runtime.rs  classifier.rs  enricher_hook.rs  extractor.rs  idempotency.rs  item.rs  lib.rs  llm.rs  materialize.rs  pattern.rs  registry.rs  resolver.rs  resolver_llm.rs  supersede_source.rs
crates/brain-extractors/tests/: llm_live.rs  llm_pipeline.rs  resolver_disambiguation_e2e.rs  resolver_edge_cases.rs  resolver_property.rs  resolver_tier3.rs  statement_kind_accuracy.rs
crates/brain-http/: Cargo.toml
crates/brain-http/benches/: end_to_end.rs  router.rs  sse_encoder.rs
crates/brain-http/src/: lib.rs
crates/brain-http/tests/: load.rs  server_shutdown.rs  server_smoke.rs  smoke.rs  sse_basic.rs  sse_reconnect.rs  streaming_smoke.rs  ws_client.rs  ws_close.rs  ws_control_frames.rs  ws_echo.rs
crates/brain-index/: Cargo.toml
crates/brain-index/benches/: insert.rs  lexical_retrieve.rs  recall.rs
crates/brain-index/src/: arena_reader.rs  entity_hnsw.rs  graph_retriever.rs  hnsw.rs  hype_hnsw.rs  idmap.rs  lib.rs  params.rs  persistence.rs  pq_hnsw.rs  rebuild.rs  semantic_retriever.rs  shared.rs  statement_hnsw.rs  statement_question_hnsw.rs  tombstones.rs
crates/brain-index/tests/: recall.rs  snapshot_chaos.rs
crates/brain-llm/: Cargo.toml
crates/brain-llm/src/: anthropic.rs  client.rs  error.rs  lib.rs  openai.rs  router.rs  types.rs
crates/brain-metadata/: Cargo.toml
crates/brain-metadata/benches/: audit_ops.rs  entity_resolve.rs  relation_ops.rs  schema_ops.rs  statement_ops.rs
crates/brain-metadata/examples/: dump_corpus.rs
crates/brain-metadata/src/: audit_ops.rs  cascade.rs  cascade_ops.rs  db.rs  entity_type_ops.rs  lib.rs  predicate_ops.rs  relation_ops.rs  schema_apply.rs  schema_store.rs  sink.rs  statement_ops.rs  storage_version.rs  sweeper_ops.rs  trigram_ops.rs
crates/brain-metadata/tests/: edge_concurrent.rs  predicate_edge_cases.rs  predicate_property.rs  recovery_chaos.rs  recovery_integration.rs  relation_type_edge_cases.rs  schema_apply_chaos.rs  schema_strict_migration.rs  statement_property.rs
crates/brain-ops/: Cargo.toml
crates/brain-ops/src/: access_buffer.rs  clock.rs  context.rs  dispatch.rs  encode.rs  error.rs  grounded.rs  idempotency.rs  lib.rs  link.rs  recall.rs  subscribe.rs  test_support.rs  writer.rs
crates/brain-ops/tests/: correctness.rs  encode.rs  encode_chaos.rs  encode_vector_direct.rs  forget.rs  link.rs  namespace_isolation.rs  plan.rs  reason.rs  recall.rs  relation_cardinality_race.rs  schema_vs_statement_race.rs  subscribe.rs  txn.rs  typed_graph_namespace_isolation.rs  wal_order.rs  writer.rs
crates/brain-planner/: Cargo.toml
crates/brain-planner/benches/: hybrid_query.rs  relation_traverse.rs  retrieval.rs  vsa_ops.rs
crates/brain-planner/src/: config.rs  context.rs  cost.rs  encode.rs  error.rs  explain.rs  lib.rs  path.rs  reason.rs  recall.rs  stats.rs
crates/brain-planner/tests/: dispatch.rs  encode_end_to_end.rs  forget_end_to_end.rs  path_executor.rs  reason_executor.rs  recall_end_to_end.rs  vsa_executors.rs
crates/brain-plugins/: Cargo.toml
crates/brain-plugins/src/: connector.rs  enricher.rs  errors.rs  lib.rs  recall.rs  registry.rs
crates/brain-plugins/tests/: sample_emoji_normalizer.rs
crates/brain-protocol/: Cargo.toml
crates/brain-protocol/benches/: frame_codec.rs
crates/brain-protocol/examples/: wire_smoke.rs
crates/brain-protocol/src/: convert.rs  crc.rs  error.rs  frame.rs  handshake.rs  header.rs  lib.rs  opcode.rs  request.rs  response.rs  rkyv_codec.rs
crates/brain-protocol/tests/: admin_backfill_roundtrip.rs  conformance.rs  error_roundtrip.rs  schema_parser.rs  schema_validator.rs  wire_version.rs
crates/brain-rerank/: Cargo.toml
crates/brain-rerank/src/: lib.rs  model.rs  service.rs
crates/brain-sdk-rust/: Cargo.toml
crates/brain-sdk-rust/examples/: load_generator.rs  soak.rs  store_and_recall.rs
crates/brain-sdk-rust/src/: lib.rs
crates/brain-sdk-rust/tests/: error_mapping.rs  handshake.rs  knowledge_entity.rs  knowledge_query.rs  knowledge_relation.rs  knowledge_schema.rs  knowledge_statement.rs  observability.rs  ops_encode.rs  ops_forget.rs  ops_link_unlink.rs  ops_procedural.rs  ops_recall.rs  ops_recall_stream.rs  ops_subscribe_stream.rs  ops_txn.rs  pool.rs
crates/brain-server/: Cargo.toml
crates/brain-server/src/: admin.rs  main.rs  routing.rs  shard.rs  shard_adapters.rs
crates/brain-server/tests/: admin.rs  agent_isolation.rs  alerts.rs  cli_e2e.rs  config.rs  connection.rs  corpus_write_read_accuracy.rs  dashboards.rs  dispatch.rs  e2e.rs  embedder_encode.rs  embedder_startup.rs  entities_phase_exit.rs  (+44 more)
crates/brain-storage/: Cargo.toml
crates/brain-workers/: Cargo.toml
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: protocol_frame.rs  protocol_request.rs  protocol_response.rs
(+1344 files in other folders)
