# Workspace root for the Brain cognitive substrate.
#
# Individual crates live under crates/. Add new members both here and in
# the relevant CLAUDE.md / ROADMAP.md sections.

[workspace]
resolver = "2"
members = [
    "crates/brain-core",
    "crates/brain-protocol",
    "crates/brain-storage",
    "crates/brain-metadata",
    "crates/brain-index",
    "crates/brain-embed",
    "crates/brain-planner",
    "crates/brain-ops",
    "crates/brain-workers",
    "crates/brain-server",
    "crates/brain-sdk-rust",
    "crates/brain-cli",
    "crates/brain-http",
]
exclude = ["fuzz"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/brain-db-io/brain-db"

# Centralize dependency versions here. Crates inherit with `dep.workspace = true`.
[workspace.dependencies]
# Async / runtime
glommio = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "sync"] }
# rustls 0.23 bundles `aws-lc-rs` as its default crypto provider; we
# install it at startup. tls12 stays off — spec §03/02 §2.2 mandates
# TLS 1.3 only; we also restrict via `ServerConfig::with_protocol_versions`.
rustls = { version = "0.23", default-features = false, features = ["std", "logging", "aws-lc-rs"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
rustls-pemfile = "2"
rcgen = "0.13"
socket2 = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
# Runtime-agnostic mpsc (used at the Tokio↔Glommio shard boundary, spec §01/04).
flume = { version = "0.11", default-features = false, features = ["async", "select"] }
futures-lite = "2"

# HTTP stack (Phase 11 — brain-http). hyper handles HTTP/1.1 wire codec,
# keep-alive, chunked transfer, body backpressure. http / http-body /
# http-body-util are the version-neutral vocabulary so HTTP/2 can slot
# in later via a feature flag without touching handlers.
bytes = "1"
http = "1"
http-body = "1"
http-body-util = "0.1"
hyper = { version = "1.5", default-features = false }
hyper-util = { version = "0.1", default-features = false }
# WebSocket framing + masking + close-handshake (used in M6).
tokio-tungstenite = { version = "0.21", default-features = false, features = ["handshake", "connect", "stream"] }
# M4: Stream trait (used by sse::SseStream and body::stream). transitively
# pulled by tokio already; declared here for hygiene.
futures-core = "0.3"
# M4: Pin projection without `unsafe`. Standard for hand-rolling Body
# impls; used by tokio, hyper, axum, et al. ~150 LOC proc-macro.
pin-project-lite = "0.2"
# tokio adapters: ReceiverStream/UnboundedReceiverStream — used by
# tests and by application producers that wire bounded mpsc to SSE.
tokio-stream = "0.1"
# M6: WebSocket Sec-WebSocket-Accept derivation per RFC 6455 §4.2.2.
sha1 = "0.10"
base64 = "0.22"
# M6 tests: drive the WebSocket protocol from the futures-side `Sink`
# and `Stream` traits.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# Serialization
rkyv = { version = "0.7", features = ["validation"] }
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Schema DSL parser (phase 19.3) — PEG grammar for `schema.brain`.
pest = "2.7"
pest_derive = "2.7"

# Storage / indexing
redb = "4"
hnsw_rs = "0.3"

# Embeddings (pure-Rust)
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
tokenizers = "0.21"

# Math / SIMD
matrixmultiply = "0.3"
wide = "0.7"

# Concurrency primitives
arc-swap = "1"
crossbeam-epoch = "0.9"
crossbeam-channel = "0.5"
parking_lot = "0.12"

# Caches
lru = "0.12"

# Small-vector inline storage — used for evidence inline arrays
# (≤ 8 entries) on Statement, see spec §19/05.
smallvec = { version = "1", features = ["const_generics", "union", "serde"] }

# Hashing / IDs
blake3 = "1"
crc32c = "0.6"
uuid = { version = "1.7", features = ["v7", "serde"] }

# Errors
thiserror = "1"
anyhow = "1"

# Syscalls (mmap/mremap/munmap/fallocate/msync/madvise — used by brain-storage).
libc = "0.2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# OpenTelemetry stack — spec §14/03 §1 mandates OTel for distributed
# tracing. Version matrix for opentelemetry 0.24:
#   opentelemetry_sdk      = 0.24
#   opentelemetry-otlp     = 0.17   (own version scheme)
#   opentelemetry-semantic-conventions = 0.16
#   tracing-opentelemetry  = 0.25
# Pinning explicitly because cross-crate version mismatches in this
# stack are the #1 reported papercut.
opentelemetry = "0.24"
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", default-features = false, features = [
    "trace",
    "http-proto",
    "reqwest-client",
    "reqwest-rustls",
] }
opentelemetry-semantic-conventions = "0.16"
tracing-opentelemetry = "0.25"

# Time
time = { version = "0.3", features = ["serde", "formatting"] }

# Testing
proptest = "1"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tempfile = "3"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = 1          # keep symbols for profiling
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
debug = 1
lto = "thin"
codegen-units = 1
