[package]
name = "brain-extractors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Extractor framework (pattern / classifier / llm) for the Brain knowledge layer."

[dependencies]
brain-core = { path = "../brain-core" }
brain-protocol = { path = "../brain-protocol" }
# 20.6: materialize loads `ExtractorDefinition` rows persisted by
# brain-metadata::schema_apply.
brain-metadata = { path = "../brain-metadata" }
# Resolver Tier 3 (embedding HNSW tie-break) calls into the per-shard
# `EntityHnswIndex` and uses the embedder `Dispatcher` trait directly
# from inside the redb write txn that owns the resolve.
brain-index = { path = "../brain-index" }
brain-embed = { path = "../brain-embed" }
# Resolver writes entity rows + indexes inside the caller's redb txn.
redb = { workspace = true }
blake3 = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
# 20.2: pattern extractor uses the regex crate's DFA matcher.
regex = { workspace = true }
# Temporal-expressions extractor does civil-date math (calendar
# month/year shifts, weekday resolution) via the `time` crate.
time = { workspace = true }
# 20.3: classifier extractor loads operator-provided BERT NER weights
# via candle (same crate set as brain-embed, phase 5).
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
# 21.3: LLM extractor depends on the transport clients + cache.
brain-llm = { path = "../brain-llm" }
# 21.3: validate the LLM response against the operator-declared
# JSON schema before projection.
jsonschema = { workspace = true }
# 21.3: cache mutex (shared with the OpsContext wiring in 21.5).
parking_lot = { workspace = true }
# Tier-4 resolver disambiguator bridges async LlmClient::complete to
# the sync ResolverLlm trait via futures_lite::future::block_on. Used
# in tests too (Extractor::run is async).
futures-lite = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
criterion.workspace = true
# E.9: property tests exercise resolver determinism + threshold
# monotonicity over randomly-generated surface-form sequences.
proptest = { workspace = true }
# `live-llm` test drives `AnthropicClient::complete` (a reqwest call
# spawned inside an async fn) and needs a real reactor. Pulled in as
# a regular dev-dep so `cargo check --all-targets` without features
# stays valid; the live test itself is `#[cfg(feature = "live-llm")]`.
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[features]
# Opt-in switch for tests that hit a real LLM provider.
# Tests under `tests/llm_live.rs` also guard on the matching env
# var (`ANTHROPIC_API_KEY`) so the suite is a no-op skip when the
# secret is unavailable. Run with:
#   cargo test -p brain-extractors --features live-llm \
#       --test llm_live -- --nocapture
live-llm = []

[[bench]]
name = "pattern_extract"
harness = false

[[bench]]
name = "llm_pipeline"
harness = false

[[bench]]
name = "statement_kind_pattern"
harness = false

[[test]]
name = "llm_live"
path = "tests/llm_live.rs"
required-features = ["live-llm"]
