[package]
name = "brain-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP/1.1, WebSocket, and SSE transport for the Brain substrate."

[features]
default = ["server", "sse", "ws"]
# Server-side accept loop + Router + Connection + graceful shutdown.
# Lands in M2; M1 only adds the foundation types.
server = ["dep:tokio", "dep:hyper-util", "dep:socket2", "hyper/server", "hyper/http1"]
# HTTP client. M5 decides whether to expose one or keep brain-cli
# hand-rolled.
client = ["dep:tokio", "hyper/client", "hyper/http1"]
# WebSocket via tokio-tungstenite — M6 (server) / M7 (client).
ws = [
    "dep:tokio-tungstenite",
    "dep:tokio",
    "dep:hyper-util",
    "dep:sha1",
    "dep:base64",
    "hyper/server",
    "hyper/http1",
]
# Server-Sent Events — M4. Streaming bodies are part of `server`
# already; `sse` toggles the higher-level SseEvent / SseStream
# helpers in `sse/`.
sse = ["dep:tokio"]
# TLS termination at the server (rustls). Optional.
tls = ["dep:tokio-rustls", "server"]

[dependencies]
brain-core = { path = "../brain-core" }

# Wire stack — see workspace Cargo.toml comments for rationale.
hyper = { workspace = true }
hyper-util = { workspace = true, optional = true, features = ["tokio", "http1", "server", "server-graceful"] }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
# M4: streaming body + SSE.
futures-core = { workspace = true }
pin-project-lite = { workspace = true }

# Runtime + observability.
tokio = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
tracing = { workspace = true }
thiserror = { workspace = true }

# Feature-gated.
tokio-tungstenite = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net", "time", "sync"] }
tokio-stream = { workspace = true }
anyhow = { workspace = true }
http-body-util = { workspace = true }
# M6 tests: WebSocket client driven via `futures` traits.
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
# M8 criterion benches.
criterion = { workspace = true }

[[bench]]
name = "router"
harness = false

[[bench]]
name = "sse_encoder"
harness = false

[[bench]]
name = "end_to_end"
harness = false
