[package]
name = "brain-index"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "ANN (HNSW) index integration for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
thiserror.workspace = true
hnsw_rs.workspace = true
tracing.workspace = true
blake3.workspace = true
crc32c.workspace = true
parking_lot.workspace = true
# Phase 22.1 — lexical retrieval. tantivy provides the BM25
# index used by the LexicalRetriever (§23/02) and laid out per
# §26/01. Schema-version stamping uses serde_json on the
# tantivy IndexMeta payload.
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Phase 22.2 — brain-side analyzer (URL + code-ID preservation
# + Porter English stemming + NFC normalization). Registered
# under tantivy's `"default"` analyzer name so 22.1's schemas
# pick it up without a schema-version bump.
regex = { workspace = true }
rust-stemmers = { workspace = true }
unicode-normalization = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "recall"
harness = false

[[bench]]
name = "insert"
harness = false
