[package]
name = "brain-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Metadata store (redb) and graph storage for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
brain-storage = { path = "../brain-storage" }
redb.workspace = true
rkyv.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
tracing.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
# Hosts the async WAL writer in integration tests (sub-task 9.6a port).
glommio.workspace = true
