[package]
name = "brain-metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Metadata store (redb) and graph storage for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
brain-storage = { path = "../brain-storage" }
# 19.5: schema_store accepts `ValidatedSchema` (brain-protocol) and
# encodes the AST via serde_json into the schema_versions row.
brain-protocol = { path = "../brain-protocol" }
serde_json = { workspace = true }
redb.workspace = true
rkyv.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
tracing.workspace = true
# 17.4: SmallVec used when projecting StatementMetadata → Statement
# (inline evidence list size INLINE_EVIDENCE_CAP).
smallvec.workspace = true
# Phase 8.dedup: BLAKE3 over canonical UTF-8 text for the
# `fingerprints` opt-in content-dedup index (spec §07/07 §6).
blake3.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile.workspace = true
# Used by fingerprint dedup tests to fabricate AgentIds.
uuid.workspace = true
# Hosts the async WAL writer in integration tests (sub-task 9.6a port).
glommio.workspace = true
# block_on for tiered supersession decider tests (judge is async).
futures-lite.workspace = true

[[bench]]
name = "entity_resolve"
harness = false

[[bench]]
name = "statement_ops"
harness = false

[[bench]]
name = "relation_ops"
harness = false

[[bench]]
name = "schema_ops"
harness = false

[[bench]]
name = "audit_ops"
harness = false
