[package]
name = "brain-ops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Cognitive operations: encode, recall, plan, reason, forget."

[dependencies]
brain-core = { path = "../brain-core" }
brain-protocol = { path = "../brain-protocol" }
brain-planner = { path = "../brain-planner" }
brain-embed = { path = "../brain-embed" }
brain-extractors = { path = "../brain-extractors" }
brain-index = { path = "../brain-index" }
brain-metadata = { path = "../brain-metadata" }
brain-rerank = { path = "../brain-rerank" }
brain-storage = { path = "../brain-storage" }
rkyv.workspace = true
redb.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true
blake3.workspace = true
uuid.workspace = true
tokio = { version = "1", default-features = false, features = ["sync"] }
# 17.7: SmallVec used when projecting overflow evidence back to inline
# for StatementView responses.
smallvec.workspace = true
# 22.3 — bounded channel between the ENCODE / FORGET post-commit
# hooks and the per-shard tantivy indexer drain task.
flume = { workspace = true }
# 22.3 — IndexWriter, PreparedCommit, Term, doc!() — used by
# the text indexer worker.
tantivy = { workspace = true }
# 22.3 — `glommio::spawn_local` for the per-shard drain task,
# `glommio::timer::sleep` + `futures_lite::FutureExt::or` for the
# Glommio-side wait-or-deadline race in the text indexers
# (matches the pattern in `brain-storage::wal::group_commit`).
# Same Linux-only constraint as brain-storage.
[target.'cfg(target_os = "linux")'.dependencies]
glommio = { workspace = true }
futures-lite = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
uuid.workspace = true
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
proptest.workspace = true
# `futures_lite::future::block_on` for synchronous tests of the
# encode-helpers' async fetch path. Production code uses Glommio's
# executor; tests drive the futures via the lightweight block-on so
# they don't pull in tokio for a single async helper.
futures-lite.workspace = true
