[package]
name = "brain-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Query planner and executor for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
brain-protocol = { path = "../brain-protocol" }
brain-embed = { path = "../brain-embed" }
brain-index = { path = "../brain-index" }
brain-metadata = { path = "../brain-metadata" }
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
uuid.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
