[package]
name = "brain-planner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Query planner and executor for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
brain-protocol = { path = "../brain-protocol" }
brain-embed = { path = "../brain-embed" }
brain-index = { path = "../brain-index" }
brain-metadata = { path = "../brain-metadata" }
brain-rerank = { path = "../brain-rerank" }
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
# 23.3: query router classification heuristics use regex over
# query text (exact-id detection, Title-Case mention probe,
# temporal expression detection).
regex = { workspace = true }
# 23.5: filter chain reads MetadataDb via a single redb
# ReadTransaction shared across the five filters.
redb = { workspace = true }
# Spec §07/07 §6 — content hash for opt-in dedup. The hash is
# computed in `execute_encode` so the writer hot path stays
# pure-redb under the metadata lock.
blake3 = { workspace = true }
# HRR (Vector Symbolic Architecture) bind/unbind are circular
# convolutions. The `vsa` module routes them through rustfft's
# split-radix planner so bind on D=512 stays well under 100 µs.
rustfft = { workspace = true }

[dev-dependencies]
uuid.workspace = true
tempfile.workspace = true
tokio = { version = "1", features = ["macros", "rt"] }
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "hybrid_query"
harness = false

[[bench]]
name = "relation_traverse"
harness = false

[[bench]]
name = "vsa_ops"
harness = false
