[package]
name = "brain-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire protocol (frame format, opcodes, codec) for Brain."

[dependencies]
brain-core = { path = "../brain-core" }
crc32c.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
rkyv.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest.workspace = true
criterion.workspace = true

[[bench]]
name = "frame_codec"
harness = false
